# RoboFEI-HT_CBR_LARS_2015

./: .gitignore  CMakeLists.txt  README.md  blackboard.cpp  blackboard.cpp~  blackboard.h  setup.sh
Blackboard/: CMakeLists.txt
Blackboard/include/: blackboard.h
Blackboard/src/: blackboard.cpp
Communication/: CMakeLists.txt  README.md  README.md~  communication.cbp  communication.depend  communication.layout
Communication/Client/: CMakeLists.txt
Communication/Client/src/: udp-broadcast-client.c
Communication/Server/: CMakeLists.txt
Communication/Server/src/: mkaddr.c  udp-broadcast-server.c
Communication/include/: LinuxNetwork.h  client_robot.h  communication.h  data_AlfarobiCommunication.h
Communication/src/: LinuxNetwork.cpp  communication.cc  communication.cpp  communication_antiga_lendo_o_config_txt.cpp
Control/: CMakeLists.txt  Control.cbp  Control.depend  README.md  ReleaseNote.txt  dfh  main.cpp
Control/Framework/doc/: ReadMe.txt
Control/Framework/include/: Action.h  DARwIn.h  MX28.h  MotionManager.h  Walking.h
Control/Framework/src/: CM730.cpp
Control/Framework/src/minIni/: minIni.c  minIni.h
Control/Framework/src/motion/: JointData.cpp  MotionManager.cpp
Control/Framework/src/motion/modules/: Action.cpp  Walking.cpp
Control/Linux/MakeFramework/: Makefile
Control/Linux/build_Framework/: Makefile
Control/Linux/project/legacy/: README
Control/Linux/project/legacy/action_editor/: Makefile  action_editor  cmd_process.cpp  cmd_process.h  main.cpp
Control/Linux/project/legacy/action_editor_backup/: Makefile  action_editor  main.cpp
Control/Linux/project/legacy/demo_jimmy/: StatusCheck.cpp  StatusCheck.h  main.cpp  script.asc  script1.asc  script2.asc  script3.asc  script4.asc  script5.asc  script6.asc  script7.asc
Control/Linux/project/ps3_demo/: StatusCheck.cpp  script1.asc  script2.asc  script3.asc  script4.asc  script5.asc  script6.asc
Control/Linux/project/rme/: Makefile  cmd_process.cpp  main.cpp  rme
Control/Linux/project/tutorial/action_script/: 1main.cpp  Makefile  main (copy).cpp  main.cpp  mov.cpp  mov.hpp
Control/Recipe/: Makefile  recipe-code  recipe-header
Control/src/: control.cpp  roboereto.cpp
Decision/: CMakeLists.txt  README.md  decision.cbp  decision.depend  decision.layout
Decision/decision/: decision.cbp  decision.cc  decision.depend  decision.layout
Decision/src/: behavior.py  decision (backup).cpp  decision (backup3).cpp  decision (backup4).cpp  decision.cc  decision.cpp  decision.py  talker_vision_simulation.py
Dynamixel/include/: dynamixel.h
Dynamixel/src/: dxl_hal.c
IMU/: CMakeLists.txt
IMU/src/: comms.cpp  imu.cpp
Include/: blackboard.h  communication.h  planning.h
Localization/: CMakeLists.txt  README.md
Localization/src/: localization.cpp
Management/: CMakeLists.txt  README.md  main.cpp  management.cbp  management.depend  management.layout
Management/src/: management  management.cpp
Milton code - Qualification/: andar.cpp  andar_de_lado.cpp  chutepedireito.cpp  distancia_bola.cpp  espera_mov.cpp  levanta_abaixa_perna_dir.cpp  levanta_abaixa_perna_esq.cpp  levantar_de_barriga.cpp  main.cpp  matriz.txt  milton_cod.cbp  milton_cod.depend  roboereto.cpp  talker.txt  talker.txt~  travar_servos.cpp  visao.cpp  visao.cpp~
Milton code - Qualification/DXL_SDK_LINUX_v1_01/include/: dynamixel.h  dynamixel.h~
Milton code - Qualification/DXL_SDK_LINUX_v1_01/src/: dxl_hal.c  dynamixel.c~
Planning/: CMakeLists.txt  README.md  main.cpp  planning.cbp  planning.cpp  planning.depend  planning.h  planning.layout
Planning/src/: main.cpp
Vision/: CMakeLists.txt  README.md
Vision/src/: .gitattributes  Ball(14f).xml  Ball(16f).xml  Ball(epic).xml  Ball.xml  Ballolder.xml  Haar.h  color_segmentation.py  vision.cpp  vision.h
Vision/src/Backup/: Ball(old).xml  Haar.h  compilar_vision.sh  vision.cpp
Vision/src/Backup/New/: vision.cpp  vision.h
Vision/src/Backup/Old/: backup2_vision.cpp  backup4_funcional_vision.cpp  vision (backup3).cpp  vision_backup.cpp
Vision/src/XML/: 5Ball.xml  7Ball.xml
conf_robos/01/: config.ini
conf_robos/02/: config.ini
conf_robos/03/: config.ini
conf_robos/04/: config.ini
genfiles/Actual/: Readme.md
genfiles/Fields/: Readme.md
milton_cod - Qualification/: andar_curto.cpp  andar_rapido.cpp  chutepedireito_fitPC.cpp  delay_mov.cpp  funcoes.c  funcoes.c~  inclinar.cpp  levantar_de_costas.cpp  levantar_de_costas_fitPC.cpp  main.c~  milton_cod.layout  virar.cpp
python/: listener.py  talker.py
start_all/: comando_startup.txt  output.txt  start_all.sh  start_comm.sh  start_commClient.sh  start_commServer.sh  start_control.sh  start_decision.sh  start_imu.sh  start_vision.sh
